제출양식 추가

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -2,7 +2,7 @@
 
 ### [목차]
 
-![1564572874402](assets/1564572874402.png)
+![목차](https://github.com/jungeunlee95/shoppingmall-project-docs/raw/master/3%EC%A3%BC%EC%B0%A8/assets/1564572874402.png)
 
 ---
 
@@ -18,9 +18,9 @@
 
 | API목록             | url                            | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
 | ------------------- | ------------------------------ | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
-| 상품 등록           | /add                           | 07.21    | 5h (5시간)   | 07.21    | 4h(4시간)  | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품등록) |
-| 상품 상위 옵션 등록 | /addOption                     | 07.22    | 1h (1시간)   | 07.21    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품상위옵션등록) |
-| 상품 최종 옵션 등록 | /addProductOption              | 07.22    | 1h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품최종옵션등록) |
+| 상품 등록           | /add                           | 07.21    | 5h (5시간)   | 07.21    | 5h(5시간)  | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품등록) |
+| 상품 상위 옵션 등록 | /addOption                     | 07.22    | 2h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품상위옵션등록) |
+| 상품 최종 옵션 등록 | /addProductOption              | 07.22    | 2h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품최종옵션등록) |
 | 상품 옵션 수정      | /modifyOptionValue/{productNo} | 07.22    | 1h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품옵션수정) |
 | 상품 삭제           | /delete/{no}                   | 07.22    | 1h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품삭제) |
 | 상품 수정           | /modify                        | 07.22    | 1h (1시간)   | 07.22    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품수정) |
@@ -31,15 +31,15 @@
 
 ### - `/api/admin/category/{url}`
 
-| API목록                      | url           | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서 |
-| ---------------------------- | ------------- | -------- | ------------ | -------- | ---------- | ---------- |
-| 상위 카테고리 등록           | /add          | 07.18    | 1h (1시간)   | 07.18    | 1h (1시간) |            |
-| 하위 카테고리 등록           | /addLow       | 07.18    | 1h (1시간)   | 07.18    | 1h (1시간) |            |
-| 상위 카테고리 이름 중복 검사 | /checkName    | 07.18    | 1h (1시간)   | 07.18    | 30m (30분) |            |
-| 하위 카테고리 이름 중복 검사 | /checkLowName | 07.19    | 1h (1시간)   | 07.18    | 30m (30분) |            |
-| 카테고리 삭제                | /delete       | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) |            |
-| 카테고리 목록 가져오기       | /list         | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) |            |
-| 카테고리 수정                | /modify       | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) |            |
+| API목록                      | url           | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| ---------------------------- | ------------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 상위 카테고리 등록           | /add          | 07.18    | 1h (1시간)   | 07.18    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상위카테고리등록) |
+| 하위 카테고리 등록           | /addLow       | 07.18    | 1h (1시간)   | 07.18    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/하위카테고리등록) |
+| 상위 카테고리 이름 중복 검사 | /checkName    | 07.18    | 1h (1시간)   | 07.18    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상위카테고리중복검사) |
+| 하위 카테고리 이름 중복 검사 | /checkLowName | 07.19    | 1h (1시간)   | 07.18    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/하위카테고리중복검사) |
+| 카테고리 삭제                | /delete       | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/카테고리삭제) |
+| 카테고리 목록 가져오기       | /list         | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/카테고리목록) |
+| 카테고리 수정                | /modify       | 07.19    | 1h (1시간)   | 07.19    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/카테고리수정) |
 
 <br>
 
@@ -47,11 +47,11 @@
 
 ### - `/api/admin/user/{url}`
 
-| API목록        | url     | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| -------------- | ------- | -------- | ------------ | -------- | -------- | ---------- |
-| 회원 목록      | /list   | 07.27    |              |          |          |            |
-| 회원 정보 수정 | /modify | 07.27    |              |          |          |            |
-| 회원 삭제      | /delete | 07.27    |              |          |          |            |
+| API목록        | url     | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| -------------- | ------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 회원 목록      | /list   | 07.27    | 1h (1시간)   | 07.27    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원목록) |
+| 회원 정보 수정 | /modify | 07.27    | 1h (1시간)   | 07.27    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원정보수정관리자) |
+| 회원 삭제      | /delete | 07.27    | 1h (1시간)   | 07.27    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원삭제관리자) |
 
 ------
 
@@ -65,11 +65,11 @@
 
 ### - `/api/cart/{url}`
 
-| API목록                | url      | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ---------------------- | -------- | -------- | ------------ | -------- | -------- | ---------- |
-| 장바구니 상품 추가     | /add     | 07.23    |              |          |          |            |
-| 장바구니 상품 삭제     | /delete  | 07.23    |              |          |          |            |
-| 장바구니 목록 가져오기 | /getList | 07.23    |              |          |          |            |
+| API목록                | url      | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| ---------------------- | -------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 장바구니 상품 추가     | /add     | 07.23    | 2h (2시간)   | 07.23    | 2h (2시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니상품추가) |
+| 장바구니 상품 삭제     | /delete  | 07.23    | 1h (1시간)   | 07.23    | 1h 1시간)  | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니상품삭제) |
+| 장바구니 목록 가져오기 | /getList | 07.23    | 1h (1시간)   | 07.23    | 1h 1시간)  | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니목록가져오기) |
 
 <br>
 
@@ -77,25 +77,23 @@
 
 ### - `/api/order/{url}`
 
-| API목록             | url          | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ------------------- | ------------ | -------- | ------------ | -------- | -------- | ---------- |
-| 회원 주문           | /add         | 07.24    |              |          |          |            |
-| 회원 주문 목록      | /list        | 07.24    |              |          |          |            |
-| 회원 주문 상세 목록 | /detail/{no} | 07.24    |              |          |          |            |
+| API목록             | url          | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| ------------------- | ------------ | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 회원 주문           | /add         | 07.26    | 5h (5시간)   | 07.26    | 5h (5시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원주문하기) |
+| 회원 주문 목록      | /list        | 07.27    | 5h (5시간)   | 07.27    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원주문목록) |
+| 회원 주문 상세 목록 | /detail/{no} | 07.28    | 5h (5시간)   | 07.28    | 4h 4시간)  | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원주문상세목록) |
 
 <br>
-
-
 
 ## 사용자 - 상품
 
 ### - `/api/product/{url}`
 
-| API목록                                              | url                             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간 | 작업결과서 |
-| ---------------------------------------------------- | ------------------------------- | -------- | ------------ | -------- | -------- | ---------- |
-| 상품 상세 정보                                       | /detail/{productNo}             | 07.20    |              |          |          |            |
-| 상품 하위 옵션 가져오기                              | /getlowoption/{productNo}       | 07.20    |              |          |          |            |
-| 특정 조건(카테고리, 검색어)에<br> 맞는 상품 가져오기 | /{categoryNo}?keyword={keyword} | 07.20    |              |          |          |            |
+| API목록                                              | url                             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| ---------------------------------------------------- | ------------------------------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 상품 상세 정보                                       | /detail/{productNo}             | 07.20    | 5h (5시간)   | 07.20    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품상세정보) |
+| 상품 하위 옵션 가져오기                              | /getlowoption/{productNo}       | 07.21    | 5h (5시간)   | 07.20    | 3h (3시간) |                                                              |
+| 특정 조건(카테고리, 검색어)에<br> 맞는 상품 가져오기 | /{categoryNo}?keyword={keyword} | 07.22    | 5h (5시간)   | 07.20    | 3h (3시간) |                                                              |
 
 
 
@@ -110,14 +108,14 @@
 | 아이디 찾기                 | /findId             | 07.16    | 1h (1시간)   | 07.16    | 1h         | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/아이디찾기) |
 | 로그인 API                  | /login              | 07.16    | 1h (1시간)   | 07.16    | 1h         | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/로그인) |
 | <br>                        |                     |          |              |          |            |                                                              |
-| 장바구니 상품 추가          | /cart/add           | 07.25    | 1h (1시간)   | 07.25    | 2h (2시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/회원장바구니상품추가) |
+| 장바구니 상품 추가          | /cart/add           | 07.25    | 1h (1시간)   | 07.25    | 2h (2시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원장바구니상품추가) |
 | 장바구니 상품 삭제          | /cart/delete        | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니상품삭제) |
 | 장바구니 목록 가져오기      | /cart/getList       | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니-목록) |
 | 장바구니 상품 옵션 가져오기 | /cart/getOptionList | 07.25    | 1h (1시간)   | 07.25    | 30m (30분) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/장바구니상품옵션가져오기) |
 | <br/>                       |                     |          |              |          |            |                                                              |
-| 비회원 주문하기             | /order/add          | 07.26    | 3h (3시간)   | 07.26    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원주문하기) |
-| 비회원 주문 목록            | /order/list         | 07.26    | 1h (1시간)   | 07.27    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원-주문목록) |
-| 비회원 주문 상세 목록       | /order/detail/{no}  | 07.26    | 1h (1시간)   | 07.27    | 1h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원주문상세목록) |
+| 비회원 주문하기             | /order/add          | 07.28    | 5h (5시간)   | 07.26    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원주문하기) |
+| 비회원 주문 목록            | /order/list         | 07.29    | 5h (5시간)   | 07.27    | 3h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원-주문목록) |
+| 비회원 주문 상세 목록       | /order/detail/{no}  | 07.29    | 5h (5시간)   | 07.27    | 3h (1시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/비회원주문상세목록) |
 
 ---
 
