제출양식 수정

--- a/3주차/작업결과서/상품하위옵션가져오기.md
+++ b/3주차/작업결과서/상품하위옵션가져오기.md
@@ -4,7 +4,7 @@
 
 - ex) 해당 상품의 detail페이지에서 옵션으로 선택하는 경우
 
-  > ![1564660507881](assets/1564660507881.png)
+  > ![1564660507881](https://github.com/jungeunlee95/shoppingmall-project-docs/raw/master/3%EC%A3%BC%EC%B0%A8/%EC%9E%91%EC%97%85%EA%B2%B0%EA%B3%BC%EC%84%9C/assets/1564660507881.png)
 
 <br>
 
@@ -50,11 +50,11 @@ public JSONResult getLowOption(@PathVariable(value = "productNo") Long productNo
 
 ```java
 @Test
-public void testGetProductDetail() throws Exception {
-    Long productNo = 34L;
+public void testGetLowOption() throws Exception {
+    Long productNo = 35L;
     ResultActions resultActions = 
         mockMvc
-        .perform(get("/api/product/detail/{productNo}", productNo)	
+        .perform(get("/api/product/getlowoption/{productNo}", productNo)	
                  .contentType(MediaType.APPLICATION_JSON)); 
 
     resultActions 
