--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -1,8 +1,8 @@
-# 작업 계획 (테이블)
+# :star: ​작업 계획 (테이블) :star:
 
 ### [목차]
 
-![목차](https://github.com/jungeunlee95/shoppingmall-project-docs/raw/master/3%EC%A3%BC%EC%B0%A8/assets/1564572874402.png)
+![1564661749400](assets/1564661749400.png)
 
 ---
 
@@ -89,11 +89,11 @@
 
 ### - `/api/product/{url}`
 
-| API목록                                              | url                             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
-| ---------------------------------------------------- | ------------------------------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
-| 상품 상세 정보                                       | /detail/{productNo}             | 07.20    | 5h (5시간)   | 07.20    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품상세정보) |
-| 상품 하위 옵션 가져오기                              | /getlowoption/{productNo}       | 07.21    | 5h (5시간)   | 07.20    | 3h (3시간) |                                                              |
-| 특정 조건(카테고리, 검색어)에<br> 맞는 상품 가져오기 | /{categoryNo}?keyword={keyword} | 07.22    | 5h (5시간)   | 07.20    | 3h (3시간) |                                                              |
+| API목록                                                   | url                             | 예상일정 | 예상소요시간 | 개발일정 | 개발시간   | 작업결과서                                                   |
+| --------------------------------------------------------- | ------------------------------- | -------- | ------------ | -------- | ---------- | ------------------------------------------------------------ |
+| 상품 상세 정보                                            | /detail/{productNo}             | 07.20    | 5h (5시간)   | 07.20    | 4h (4시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품상세정보) |
+| 상품 하위 옵션 가져오기                                   | /getlowoption/{productNo}       | 07.21    | 5h (5시간)   | 07.20    | 3h (3시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품하위옵션가져오기) |
+| 특정 조건(카테고리, 검색어)에<br> 맞는 상품 목록 가져오기 | /{categoryNo}?keyword={keyword} | 07.22    | 5h (5시간)   | 07.20    | 3h (3시간) | [보기](https://github.com/jungeunlee95/shopping-mall/wiki/상품목록가져오기) |
 
 
 
@@ -140,3 +140,59 @@
 ---
 
 <br>
+
+# 
+
+
+
+# :star: TODO LIST & 개선사항:star:
+
+- 카테고리 테이블 수정하기 
+
+  > 현재 카테고리가 1개의 테이블로 구성이 되어있다. 
+  >
+  > 하지만 카테고리 수정과 확장성을 고려 했을 때, 카테고리 테이블을 2개로 나누는 것이 좋을 것 같다.
+  >
+  > ex) 아래와 같은 형식으로 카테고리 테이블을 나누는 것이 좋을 것 같다.
+  >
+  > ```sql
+  > CREATE TABLE category (
+  >     category_no INTEGER NOT NULL,
+  >     category_name VARCHAR(100) NOT NULL
+  >     CONSTRAINT pk_category PRIMARY KEY (category_no)
+  > );
+  > 
+  > CREATE TABLE t_category_tree (
+  >     tree_type CHAR(1) NOT NULL,
+  >     category_no INTEGER NOT NULL,
+  >     parent_category_no INTEGER NOT NULL,
+  >     sort_no INTEGER NOT NULL,
+  >     depth_no INTEGER NOT NULL,
+  >     category_name_for_tree VARCHAR(100) NULL,
+  >     CONSTRAINT pk_category_tree PRIMARY KEY (tree_type, category_no, parent_category_no)
+  > );
+  > ```
+  >
+  > 
+
+- mall_id 테이블 만들기
+- 모든 컬럼에 mall_id 추가하기
+- ~~상품 등록, 옵션 등록 합치기~~
+- 이미지 업로드 (대표사진)
+- user table role 수정 => ROLE_USER, ROLE_ADMIN
+- ~~주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인~~
+- ~~주문시 장바구니 비우기~~
+- 장바구니 담을때도 재고 확인하기 -> `orderDao.stockCheck()`
+- ~~발리데이션 추가하기 ( 커스텀 )~~
+- 파라미터 받기 형식 수정하기 (파람, 패스배리어블)
+- db예외처리
+
+✨장바구니 erd 수정하기✨
+
+
+
+**개선**
+
+-> 비회원 컨트롤러 -> 비회원 기능 나누기
+
+> 나중에 시큐리티  적용하고 `antMatch("/nonuser**").permitAll()` 이런식으로 나누기위해
