제출양식 수정

--- a/3주차/제출양식.md
+++ b/3주차/제출양식.md
@@ -1,8 +1,6 @@
 # :star: ​작업 계획 (테이블) :star:
 
-### [목차]
-
-![1564661749400](assets/1564661749400.png)
+### ![1564663129174](assets/1564663129174.png)
 
 ---
 
@@ -143,11 +141,25 @@
 
 # 
 
+# :star: TODO LIST :star:
 
+- **보안(Spring Security)과 인증(Oauth2) 적용하기**
 
-# :star: TODO LIST & 개선사항:star:
+  > - api를 집중해서 만들며 보안과 인증 절차를 적용하지 않았다.
+  >
+  > - 관리자의 경우 `/admin/**` url에 `ROLE_AMDIN` 권한을 적용해야 한다.
+  >
+  > - 비회원의 경우(**장바구니, 주문, 상품조회 등의 기능을 NonUserController에 몰아 넣었다.**) `/nonuser/**`url의 권한을 모두 허용해야한다. 
+  >
+  >   > ex) `antMatch("/nonuser**").permitAll()`
+  >
+  >   > -> 효율적인 방법인지 깊게 고려해보지 못했지만, 비회원에게 모든 권한을 열어주기 위해서 비회원컨트롤러에 권한을 필요로하지 않는 기능을 몰아넣었다.
+  >
+  > - 그 외의 모든 url은 `ROLE_USER` 권한을 필요로 한다.
 
-- 카테고리 테이블 수정하기 
+  <br>
+
+- **카테고리 테이블 수정하기** 
 
   > 현재 카테고리가 1개의 테이블로 구성이 되어있다. 
   >
@@ -172,27 +184,72 @@
   >     CONSTRAINT pk_category_tree PRIMARY KEY (tree_type, category_no, parent_category_no)
   > );
   > ```
-  >
-  > 
+
+<br>
 
 - mall_id 테이블 만들기
+
 - 모든 컬럼에 mall_id 추가하기
-- ~~상품 등록, 옵션 등록 합치기~~
-- 이미지 업로드 (대표사진)
+
+  > 멀티 쇼핑몰 확장성을 고려해서 쇼핑몰을 구분할 수 있는 mall_id테이블을 만들고,
+  >
+  > 모든 테이블 컬럼에 mall_id를 추가하는 것이 좋을 것 같다.
+  >
+  > 아직 보안과 인증을 적용하지 않았지만 Security를 적용할 계획이기 때문에 mall_id를 추가해 client_id로 활용하는 것도 좋은 방법이라 생각한다.
+
+<br>
+
+- 이미지 업로드 (대표사진), Contents(HTML 편집기)
+
+  > 아직 상품의 이미지를 넣는 기능을 하지 않았다. -> 프론트엔드와 함께 다시 구현할 예정
+
+<br>
+
 - user table role 수정 => ROLE_USER, ROLE_ADMIN
-- ~~주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인~~
-- ~~주문시 장바구니 비우기~~
-- 장바구니 담을때도 재고 확인하기 -> `orderDao.stockCheck()`
-- ~~발리데이션 추가하기 ( 커스텀 )~~
+
+  > 현재 table에 데이터가 `enum('U', 'A')` 형식으로 들어간다. 
+  >
+  > 이를 씨큐리티 적용을 고려하여 `enum('ROLE_USER', 'ROLE_ADMIN')` 로 수정해야한다.
+
+<br>
+
+- db예외처리 -> 트랜잭션으로 처리하기
+
+<br>
+
+# 
+
+# :star: 개선사항 :star:
+
+- **비회원 컨트롤러 -> 비회원 기능 나누기**
+
+  > 나중에 시큐리티  적용하고 `antMatch("/nonuser**").permitAll()` 이런식으로 나누기위해, 기존에 기능별로(장바구니 -CartController, 주문-OrderController 등..) 나누었던 URL을, 로그인하지 않아도 사용할 수 있도록 `NonUserController`로 넣었다.
+
+- **상품 등록, 옵션 등록 합치기**
+
+  > 원래 상품 등록을 View에서 버튼을 누를 때 마다 ajax통신으로 하나씩 해결할 생각이였다. 
+  >
+  > 하지만, 상품 등록을 누른 순간 `/product/add` url로 한번만 통신을 하여 Service단에서 한번에 받은 데이터들을 처리했다.
+
+- **주문시 재고 확인, 결제됐는지 확인 -> 어떤 제품이 재고가 없는지 확인** && 트랜젝션 고려하기
+
+  > 주문 시 재고를 고려하지않고 바로 주문 테이블에 insert를 했었다.
+  >
+  > 주문 시 재고를 체크하는 옵션인지 고려한 뒤, 재고를 체크해야하는 경우 주문 재고보다 장바구니 재고가 더 많은지 확인한다.
+  >
+  > 고려 해야 할 것 :  여러 사람이 동시에 주문할 경우 트랜잭션을 어떻게 처리해야할지 고려해보아야한다.
+  >
+  > -> 생각한 방안 : 주문을하는 경우 해당 url의 서비스 로직에 LOCK을 걸어 첫번째 사용자가 결제완료가 되기까지 다른 사용자가 주문할 수 없도록 한다.  
+
+- ~~**주문시 장바구니 비우기**~~
+
+- **~~발리데이션 추가하기 ( 커스텀 )~~**
+
 - 파라미터 받기 형식 수정하기 (파람, 패스배리어블)
-- db예외처리
 
-✨장바구니 erd 수정하기✨
-
+  > 일관성 없는 형식으로 파라미터를 마구잡이로 받았었는데, 이를 나름 일관성 있게 수정하였다.
 
 
-**개선**
 
--> 비회원 컨트롤러 -> 비회원 기능 나누기
 
-> 나중에 시큐리티  적용하고 `antMatch("/nonuser**").permitAll()` 이런식으로 나누기위해
+
