--- a/3주차/작업결과서/회원가입.md
+++ b/3주차/작업결과서/회원가입.md
@@ -4,16 +4,14 @@
      params: 
        userVo= 
 
-		> ```
-		> id: 아이디
-		> password: 비밀번호
-		> name: 이름
-		> passwordQuestion: 비밀번호 질문
-		> passwordAnswer: 비밀번호 대답
-		> phoneNumber: 전화번호
-		> birthDate: 생일 - 선택값
-		> email: 이메일 - 선택값
-		> ```
+	id: 아이디
+	password: 비밀번호
+	name: 이름
+	passwordQuestion: 비밀번호 질문
+	passwordAnswer: 비밀번호 대답
+	phoneNumber: 전화번호
+	birthDate: 생일 - 선택값
+	email: 이메일 - 선택값
 
 ■ response: 
      200: 성공 
