--- a/4주차/부서설명.md
+++ b/4주차/부서설명.md
@@ -1,3 +1,7 @@
+[TOC]
+
+---
+
 4IR TF
 
 - 기획 생산, 재고, 판매, 배송 모든 과정
@@ -5,7 +9,7 @@
 
 ---
 
-BI연구소 - CMC 그룹 - 마케팅
+# BI연구소 - CMC 그룹 - 마케팅
 
 - 마케팅센터 서비스 : 쇼핑몰 매출 높이기 위해 패턴 분석, 광고 등 실질적 쇼핑몰 매출에 관련한 데이터 분석, 제공
 - FBE 서비스 : 페이스북 마케팅 운영 도움
@@ -27,13 +31,13 @@ BI연구소 - 데이터 아키텍트 팀
 
 ---
 
-EC솔루션
+# EC솔루션 - api
 
 - E-Commerce 기본 솔루션 개발
 
 ---
 
-ci tech 팀
+# ci tech 팀
 
 - 머신러닝, 인공지능
 - 테스트 자동화 
