--- a/4주차/일정.md
+++ b/4주차/일정.md
@@ -4,17 +4,20 @@
 
 # :star: TODO LIST :star:
 
-- 보안(Spring Security)과 인증(Oauth2) 적용하기
+- 보안(Spring Security)과 인증(Oauth2) 적용하기 -> 보충 필요
 
 
-- 이미지 업로드 (대표사진), Contents(HTML 편집기)
+- ~~이미지 업로드 (대표사진), Contents(HTML 편집기)~~
 
 
-- user table role 수정 => ROLE_USER, ROLE_ADMIN
+- ~~user table role 수정 => ROLE_USER, ROLE_ADMIN~~
 
 
 - usr table - reg_date 추가하기
 - api 서버 꺼져있을 때 -> error
+- 옵션 없는 경우 -> null 추가
+- 다중 옵션 추가
+- 페이징 추가
 
 ---
 
@@ -28,9 +31,9 @@
 > 메인 > 회원가입 > 로그인 > 상품상세 > 장바구니 담기 > 장바구니 목록(옵션)
 
 2. 쇼핑몰 관리자 구현
-> 쇼핑몰 관리자 로그인 > ~~상품 목록~~ > 상품 등록
+> ~~쇼핑몰 관리자 로그인 > ~~상품 목록 > 상품 등록~~
 > ~~쇼핑몰 관리자 로그인 > 회원 목록~~
-> 쇼핑몰 관리자 로그인 > 장바구니 목록(옵션)
+> ~~쇼핑몰 관리자 로그인 > 장바구니 목록(옵션)~~
 
 
 
@@ -56,7 +59,7 @@
 
 
 
-# :red_circle: 썸머노트 이미지 ajax 통신 에러
+# :red_circle: ~~썸머노트 이미지 ajax 통신 에러~~ 해결
 
 
 
