--- a/4주차/일정.md
+++ b/4주차/일정.md
@@ -18,6 +18,8 @@
 - 옵션 없는 경우 -> null 추가
 - 다중 옵션 추가
 - 페이징 추가
+- 로그인 - 비밀번호?
+- 비회원 장바구니 추가
 
 ---
 
@@ -88,11 +90,52 @@
 
 - 상품등록 - 옵션 radio값, 옵션 추가 취소
 
+---
 
 
-```
 
-```
+---
+
+주문시 필요한 정보
+
+- 주문 내역(상품 정보)
+
+- 주문 정보
+
+주문하는 사람 - 
+
+주소 - 우편번호, 기본주소, 나머지 주소
+
+전화 
+
+이메일
+
+- 배송정보
+
+배송지 선택 - 주문정보와 동일, 새로운 배송지, 내 배송지
+
+받으시는 분
+
+주소
+
+전화 
+
+배송메세지
+
+
+
+- 결제 예정 금액
+
+총 주문 금액, 배송비, 총 결제 예정 금액
+
+
+
+- 결제 수단
+- 
+
+
+
+
 
 
 
